# hyperworld

./: .gitignore  .gitlab-ci.yml  CHANGELOG-cn.md  CHANGELOG-en-cn.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build-server-dockerimage.sh  docker-compose.yml  flake.nix  sources-http.list
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: mirror.yml
.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml
.gitlab/issue_templates/: Bug.md
.gitlab/scripts/: benchmark.sh  ci.sh  code-quality.sh  linux-aarch64.sh  unittest.sh
assets/common/abilities/: ability_set_manifest.ron
assets/voxygen/: net.veloren.veloren.desktop  net.veloren.veloren.metainfo.xml
assets/voxygen/audio/: soundtrack.ron
assets/voxygen/i18n/: README.md
assets/voxygen/voxel/: biped_large_lateral_manifest.ron
client/: Cargo.toml
client/examples/chat-cli/: main.rs
client/i18n/: Cargo.toml
client/i18n/src/: lib.rs
client/src/: lib.rs
common/: Cargo.toml
common/assets/: Cargo.toml
common/assets/src/: fs.rs  lib.rs
common/base/: Cargo.toml
common/base/src/: userdata_dir.rs
common/benches/: chonk_benchmark.rs  color_benchmark.rs
common/dynlib/: Cargo.toml
common/ecs/: Cargo.toml
common/ecs/src/: system.rs
common/frontend/: Cargo.toml
common/frontend/src/: lib.rs
common/net/: Cargo.toml
common/src/: generation.rs  slowjob.rs  typed.rs
common/src/comp/: ability.rs  anchor.rs  ori.rs  player.rs
common/src/terrain/: mod.rs
common/state/: Cargo.toml
common/state/src/: lib.rs
common/systems/: Cargo.toml
common/systems/tests/: character_state.rs
common/systems/tests/phys/: basic.rs  utils.rs
network/: Cargo.toml
network/benches/: speed.rs
network/examples/: chat.rs  tcp_loadtest.rs
network/examples/fileshare/: commands.rs  main.rs  server.rs
network/examples/network-speed/: main.rs
network/protocol/: Cargo.toml
network/protocol/benches/: protocols.rs
network/protocol/src/: error.rs  handshake.rs  lib.rs  types.rs
network/src/: api.rs  lib.rs  message.rs
network/tests/: closing.rs  helper.rs  integration.rs
nix/: README.md
plugin/api/: Cargo.toml
plugin/api/src/: lib.rs
plugin/derive/: Cargo.toml
plugin/derive/src/: lib.rs
plugin/rt/: Cargo.toml
plugin/rt/examples/: hello.rs
server/: Cargo.toml
server-cli/: Cargo.toml  Dockerfile  docker-compose.yml
server-cli/src/: cli.rs  shutdown_coordinator.rs
server/agent/: Cargo.toml
server/agent/src/: lib.rs
server/src/: cmd.rs  lib.rs  metrics.rs  settings.rs
server/src/events/: entity_manipulation.rs
server/src/migrations/: V10__dash_melee_energy_cost_fix.sql  V16__item_persistence.sql  V19__move_waypoint_to_stats.sql  V20__item_storage.sql  V49__modular_weapons.sql
server/src/persistence/: character.rs  mod.rs
server/src/settings/: server_description.rs
server/src/sys/: agent.rs
voxygen/: Cargo.toml
voxygen/anim/: Cargo.toml
voxygen/anim/src/: lib.rs
voxygen/benches/: meshing_benchmark.rs
voxygen/egui/: Cargo.toml
voxygen/egui/src/: lib.rs
voxygen/examples/: character_renderer.rs
voxygen/i18n-helpers/: Cargo.toml
voxygen/src/: main.rs  panic_handler.rs  singleplayer.rs  window.rs
voxygen/src/audio/: mod.rs
voxygen/src/hud/: crafting.rs  diary.rs  mod.rs  trade.rs  (+1 more)
world/: Cargo.toml
world/benches/: tree.rs
world/examples/: chunk_compression_benchmarks.rs  dungeon_voxel_export.rs  economy_tree.rs  heightmap_visualization.rs  pricing_csv.rs  settlement_viewer.rs  site.rs  view.rs  water.rs  world_block_statistics.rs
world/src/: lib.rs
(+111 files in other folders)
