[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "hyperworld-common-systems"
version = "0.10.0"

[features]
simd = ["vek/platform_intrinsics"]

default = ["simd"]

[dependencies]
common = { package = "hyperworld-common", path = ".." }
common-net = { package = "hyperworld-common-net", path = "../net" }
common-ecs = { package = "hyperworld-common-ecs", path = "../ecs" }
common-base = { package = "hyperworld-common-base", path = "../base" }

rand = "0.8"
rayon = "1.5"
tracing = { version = "0.1", default-features = false }
vek = { version = "0.15.8", features = ["serde"] }
ordered-float = { version = "3", default-features = false }
itertools = "0.10"

# Data structures
hashbrown = { version = "0.12", features = ["rayon", "serde", "nightly"] }
indexmap = "1.3.0"
slab = "0.4.2"

# ECS
specs = { version = "0.18", features = ["serde", "storage-event-control", "derive"] }

# Tweak running code
# inline_tweak = { version = "1.0.8", features = ["release_tweak"] }

[dev-dependencies]
# Setup a State
common-state = { package = "hyperworld-common-state", path = "../state" }
