[package]
name = "hyperworld-plugin-rt"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[dependencies]
plugin-api = { package = "hyperworld-plugin-api", path = "../api" }
plugin-derive = { package = "hyperworld-plugin-derive", path = "../derive"}
serde = {version = "1.0.118", features = ["derive"]}
bincode = "1.3.1"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[dev-dependencies]
plugin-derive = { package = "hyperworld-plugin-derive", path = "../derive"}
