[package]
authors = ["Ben Wallis <atomyc@gmail.com>"]
name = "hyperworld-voxygen-egui"
edition = "2021"
version = "0.9.0"

[features]
use-dyn-lib = ["common-dynlib"]
be-dyn-lib = []

[dependencies]
client = {package = "hyperworld-client", path = "../../client"}
common = {package = "hyperworld-common", path = "../../common"}
egui = "0.12"
egui_winit_platform = "0.8"
lazy_static = "1.4.0"
common-dynlib = {package = "hyperworld-common-dynlib", path = "../../common/dynlib", optional = true}


