[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2021"
name = "hyperworld-voxygen-i18n-helpers"
description = "Crate for internalization and diagnostic of existing localizations."
version = "0.10.0"

[dependencies]
common-net = {package = "hyperworld-common-net", path = "../../common/net"}
common = {package = "hyperworld-common", path = "../../common"}
i18n = {package = "hyperworld-client-i18n", path = "../../client/i18n"}
# Utility
tracing = "0.1"